@@ -70,6 +70,7 @@
 #cmakedefine01 ENABLE_METER_ELEMENT
 #cmakedefine01 ENABLE_MICRODATA
 #cmakedefine01 ENABLE_MUTATION_OBSERVERS
+#cmakedefine01 ENABLE_NAVIGATOR_CONTENT_UTILS
 #cmakedefine01 ENABLE_NETSCAPE_PLUGIN_API
 #cmakedefine01 ENABLE_NETWORK_INFO
 #cmakedefine01 ENABLE_NOTIFICATIONS
@@ -78,7 +79,6 @@
 #cmakedefine01 ENABLE_PAGE_POPUP
 #cmakedefine01 ENABLE_PAGE_VISIBILITY_API
 #cmakedefine01 ENABLE_PROGRESS_ELEMENT
-#cmakedefine01 ENABLE_REGISTER_PROTOCOL_HANDLER
 #cmakedefine01 ENABLE_REQUEST_ANIMATION_FRAME
 #cmakedefine01 ENABLE_SHADOW_DOM
 #cmakedefine01 ENABLE_SHARED_WORKERS
